ingress-backup.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"meta.helm.sh/release-name":"jhub2","meta.helm.sh/release-namespace":"jhub2","nginx.ingress.kubernetes.io/proxy-body-size":"0","nginx.ingress.kubernetes.io/proxy-read-timeout":"3600","nginx.ingress.kubernetes.io/proxy-send-timeout":"3600","nginx.ingress.kubernetes.io/service-upstream":"true","nginx.ingress.kubernetes.io/ssl-redirect":"false","nginx.ingress.kubernetes.io/upstream-port":"8000"},"creationTimest [...]
      meta.helm.sh/release-name: jhub2
      meta.helm.sh/release-namespace: jhub2
      nginx.ingress.kubernetes.io/proxy-body-size: "0"
      nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
      nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
      nginx.ingress.kubernetes.io/service-upstream: "true"
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
      nginx.ingress.kubernetes.io/upstream-port: "8000"
    creationTimestamp: "2024-12-18T06:16:29Z"
    generation: 8
    labels:
      app: jupyterhub
      app.kubernetes.io/managed-by: Helm
      chart: jupyterhub-3.3.8
      component: ingress
      heritage: Helm
      release: jhub2
    name: jupyterhub
    namespace: jhub2
    resourceVersion: "1187719"
    uid: 28698952-9226-408c-b96d-92b843464a75
  spec:
    ingressClassName: nginx
    rules:
    - host: jupyterhub2.local
      http:
        paths:
        - backend:
            service:
              name: proxy-public
              port:
                name: http
          path: /
          pathType: Prefix
    - host: jupyter.sail
      http:
        paths:
        - backend:
            service:
              name: proxy-public
              port:
                name: http
          path: /
          pathType: Prefix
    - http:
        paths:
        - backend:
            service:
              name: proxy-public
              port:
                name: http
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 10.105.10.200
kind: List
metadata:
  resourceVersion: ""
